split train.sh to modules